--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <h2 style="font-size:30px;Color: red;text-align:center;"> About us </h>
 <p style="font-size:20px;Color: black;text-align:center;margin-bottom: 50px;"> Steel And Iron works that give's a good look to your House </p>
 <hr>
+<h2 style="font-size:50px;text-align:center;"> Our Core desgin </h>
+<hr>
 <img style="width: 30%;" src="img1.jpg">
 <img style="width: 30%;" src="img2.jpg">
 <img style="width: 30%;" src="img3.jpg">
